# everest-framework

./: .gitignore  BUILD  WORKSPACE  WORKSPACE.bazel
.github/workflows/: macos-build.yaml
everestjs/: everestjs.cpp
everestrs/: CMakeLists.txt  Cargo.toml
everestrs/everestrs/: BUILD  BUILD.bazel  Cargo.toml  README.md  build.rs
everestrs/everestrs-build/: BUILD  BUILD.bazel  Cargo.toml
everestrs/everestrs-build/jinja/: client.jinja2  config.jinja2  module.jinja2  provide_traits.jinja2  service.jinja2  type_module.jinja2  types.jinja2
everestrs/everestrs-build/src/: codegen.rs  lib.rs
everestrs/everestrs-build/src/schema/: interface.rs  manifest.rs  mod.rs  type.rs
everestrs/everestrs/src/: everestrs_sys.cpp  lib.rs
everestrs/everestrs/src/schema/: interface.rs
everestrs/everestrs_sys/: everestrs_sys.cpp  everestrs_sys.hpp
lib/: runtime.cpp  set_process_name.linux.cpp  set_process_name.macos.cpp
src/: CMakeLists.txt  create_pipe.linux.cpp
