load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

filegroup(
  name = "templates",
  srcs = glob(["jinja/**/*"]),
)

rust_library(
  name = "everestrs-build",
  srcs = glob(["src/**/*.rs"], exclude = ["src/bin/**"]),
  deps = [
    "//third-party/bazel:anyhow",
    "//third-party/bazel:argh",
    "//third-party/bazel:convert_case",
    "//third-party/bazel:minijinja",
    "//third-party/bazel:serde",
    "//third-party/bazel:serde_json",
    "//third-party/bazel:serde_yaml",
  ],
  data = ["@com_github_everest_everest-framework//everestrs/everestrs-build:templates"],
  visibility = ["//visibility:public"],
  edition = "2021",
)

rust_binary(
  name = "codegen",
  srcs = glob(["src/bin/**/*.rs"]),
  deps = [
    "@com_github_everest_everest-framework//everestrs/everestrs-build:everestrs-build",
    "//third-party/bazel:anyhow",
    "//third-party/bazel:argh",
  ],
  edition = "2021",
)
