load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("@crate_index//:defs.bzl", "all_crate_deps")

filegroup(
  name = "teplates",
  srcs = glob(["jinja/**/*"]),
)

rust_library(
  name = "everestrs-build",
  srcs = glob(["src/**/*.rs"], exclude = ["src/bin/**"]),
  deps = all_crate_deps("@com_github_everest_everest-framework//everestrs/everestrs-build"),
  data = [":teplates"],
  visibility = ["//visibility:public"],
)

rust_binary(
  name = "codegen",
  srcs = glob(["src/bin/**/*.rs"]),
  deps = [":everestrs-build"] + all_crate_deps("@com_github_everest_everest-framework//everestrs/everestrs-build"),
)
