load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

filegroup(
  name = "teplates",
  srcs = glob(["jinja/**/*"]),
)
rust_library(
  name = "everestrs-build",
  srcs = glob(["src/**/*.rs"], exclude = ["src/bin/**"]),
  deps = [
    "@crate_index//:anyhow", 
    "@crate_index//:convert_case", 
    "@crate_index//:minijinja",
    "@crate_index//:serde",
    "@crate_index//:serde_json",
    "@crate_index//:serde_yaml",
  ],
  data = [":teplates"],
  visibility = ["//visibility:public"],
)

rust_binary(
  name = "codegen",
  srcs = glob(["src/bin/**/*.rs"]),
  deps = [
    ":everestrs-build",
    "@crate_index//:anyhow", 
    "@crate_index__argh-0.1.12//:argh",
  ],
)
