load("@rules_rust//rust:defs.bzl", "rust_library")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@crate_index//:defs.bzl", "all_crate_deps")
package(default_visibility = ["//visibility:public"])

rust_library(
  name = "everestrs",
  srcs = glob(["src/**/*.rs"]),
  edition = "2021",
  deps = [
      "@crate_index//:argh",
      "@crate_index//:serde",
      "@crate_index//:serde_json",
      "@crate_index//:thiserror",
      "@cxx.rs//:cxx",
      "@com_github_everest_everest-framework//everestrs/everestrs:everestrs_sys-include",
      "@com_github_everest_everest-framework//everestrs/everestrs:everestrs_sys",
      "@com_github_everest_everest-framework//everestrs/everestrs:everestrs_bridge",
      "@com_github_everest_everest-framework//everestrs/everestrs-build:everestrs-build",
  ],
  compile_data = [
    "@com_github_everest_everest-framework//everestrs/everestrs:everestrs_sys-include",
  ],
)

cc_library(
  name = "everestrs_sys-include",
  hdrs = ["src/everestrs_sys.hpp"],
  deps = [
    "@cxx.rs//:core",
    "@com_github_everest_everest-framework//:framework",
  ],
  visibility = ["//visibility:public"],
  include_prefix = "everestrs",
  copts = [
    "-std=c++17",
  ],
)

run_binary(
    name = "everestrs_bridge/generated",
    srcs = ["src/lib.rs"],
    outs = [
        "src/lib.rs.h",
        "src/lib.rs.cc",
    ],
    args = [
        "$(location src/lib.rs)",
        "-o",
        "$(location src/lib.rs.h)",
        "-o",
        "$(location src/lib.rs.cc)",
    ],
    tool = "@cxx.rs//:codegen",
)

cc_library(
  name = "everestrs_bridge",
  srcs = ["src/lib.rs.cc"],
  deps = [
    ":everestrs_sys-include",
    ":everestrs_bridge/include",
  ]
)

cc_library(
    name = "everestrs_bridge/include",
    hdrs = ["src/lib.rs.h"],
    include_prefix = "everestrs",
)


cc_library(
  name = "everestrs_sys",
  srcs = glob(["src/**/*.cpp"]),
  deps = [
    "@com_github_everest_everest-framework//:framework",
    ":everestrs_bridge/include",
    ":everestrs_sys-include",
  ],
  copts = [
    "-std=c++17",
  ],
  alwayslink = True,
)


